@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:34:05
+# Today is: Thursday, the 17 of May, 2012; 22:22:04
 #
 # Description: Linux 2.4 Configurations
 #
@@ -268,7 +268,7 @@ define_int CONFIG_XILINX_INTC_0_SPLB_MID_WIDTH 2
 define_int CONFIG_XILINX_INTC_0_SPLB_NATIVE_DWIDTH 32
 define_int CONFIG_XILINX_INTC_0_SPLB_SUPPORT_BURSTS 0
 define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 11
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111100000010000
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111100000000001
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
@@ -282,14 +282,14 @@ define_string CONFIG_XILINX_INTC_0_INSTANCE xps_intc_0
 # mbref_mio_0_IP2INTC_Irpt
 # mbref_reg_0_IP2INTC_Irpt
 # xps_iic_0_IIC2INTC_Irpt
-# PCIe_Bridge_IP2INTC_Irpt
-# xps_sysace_0_SysACE_IRQ
-# xps_ether_0_TemacIntc0_Irpt
-# xps_timer_0_Interrupt
 # xps_uart_0_IP2INTC_Irpt
+# xps_ether_0_TemacIntc0_Irpt
+# xps_sysace_0_SysACE_IRQ
+# PCIe_Bridge_IP2INTC_Irpt
 # xps_central_dma_0_IP2INTC_Irpt
 # mpmc_0_SDMA3_Rx_IntOut
 # mpmc_0_SDMA3_Tx_IntOut
+# xps_timer_0_Interrupt
 
 # Timer is xps_timer_0
 define_string CONFIG_XILINX_TIMER_0_FAMILY virtex6
@@ -310,7 +310,7 @@ define_int CONFIG_XILINX_TIMER_0_SPLB_SUPPORT_BURSTS 0
 define_int CONFIG_XILINX_TIMER_0_SPLB_NATIVE_DWIDTH 32
 define_string CONFIG_XILINX_TIMER_0_HW_VER 1.02.a
 define_string CONFIG_XILINX_TIMER_0_INSTANCE xps_timer_0
-define_int CONFIG_XILINX_TIMER_0_Interrupt 4
+define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
 # System memory is mpmc_0
 define_hex CONFIG_XILINX_ERAM_START 0x20000000
