@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:34:05
+# Today is: Thursday, the 17 of May, 2012; 22:22:04
 #
 # Description: U-Boot Configurations
 #
