@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:34:07
+ * Today is: Thursday, the 17 of May, 2012; 22:22:06
  *
  * XPS project directory: Xilinx-ML605-MMU-full-13.2
  */
@@ -46,7 +46,7 @@
 		serial0 = &xps_uart_0;
 	} ;
 	chosen {
-		bootargs = "console=ttyS0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyS0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/plb@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -164,7 +164,7 @@
 		PCIe_Bridge: plbv46-pcie@8abf0000 {
 			compatible = "xlnx,plbv46-pcie-4.07.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 7 2 >;
+			interrupts = < 4 2 >;
 			reg = < 0x8abf0000 0x10000 >;
 			xlnx,board = "none";
 			xlnx,class-code = <0x58000>;
@@ -295,7 +295,7 @@
 			PIM3: sdma@8adf0180 {
 				compatible = "xlnx,ll-dma-1.00.a";
 				interrupt-parent = <&xps_intc_0>;
-				interrupts = < 1 2 0 2 >;
+				interrupts = < 2 2 1 2 >;
 				reg = < 0x8adf0180 0x80 >;
 			} ;
 		} ;
@@ -390,7 +390,7 @@
 		xps_central_dma_0: xps-central-dma@8acf0000 {
 			compatible = "xlnx,xps-central-dma-2.03.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 2 2 >;
+			interrupts = < 3 2 >;
 			reg = < 0x8acf0000 0x10000 >;
 			xlnx,family = "virtex6";
 			xlnx,fifo-depth = <0x8>;
@@ -409,9 +409,9 @@
 				compatible = "xlnx,xps-ll-temac-2.03.a", "xlnx,xps-ll-temac-1.01.b", "xlnx,xps-ll-temac-1.00.a";
 				device_type = "network";
 				interrupt-parent = <&xps_intc_0>;
-				interrupts = < 5 2 >;
+				interrupts = < 6 2 >;
 				llink-connected = <&PIM3>;
-				local-mac-address = [ 00 0a 35 7f 28 00 ];
+				local-mac-address = [ 00 0a 35 ee 97 00 ];
 				phy-handle = <&phy0>;
 				reg = < 0x88f00000 0x40 >;
 				xlnx,avb = <0x0>;
@@ -545,14 +545,14 @@
 			compatible = "xlnx,xps-intc-2.01.a", "xlnx,xps-intc-1.00.a";
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
-			xlnx,kind-of-intr = <0x10>;
+			xlnx,kind-of-intr = <0x1>;
 			xlnx,num-intr-inputs = <0xb>;
 		} ;
 		xps_sysace_0: sysace@83600000 {
 			8-bit ;
 			compatible = "xlnx,xps-sysace-1.01.a", "xlnx,xps-sysace-1.00.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 6 2 >;
+			interrupts = < 5 2 >;
 			reg = < 0x83600000 0x10000 >;
 			xlnx,family = "virtex6";
 			xlnx,mem-width = <0x8>;
@@ -560,7 +560,7 @@
 		xps_timer_0: system-timer@8aef0000 {
 			compatible = "xlnx,xps-timer-1.02.a", "xlnx,xps-timer-1.00.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 4 0 >;
+			interrupts = < 0 0 >;
 			reg = < 0x8aef0000 0x10000 >;
 			xlnx,count-width = <0x20>;
 			xlnx,family = "virtex6";
@@ -576,7 +576,7 @@
 			current-speed = <9600>;
 			device_type = "serial";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 3 2 >;
+			interrupts = < 7 2 >;
 			reg = < 0x89ff0000 0x10000 >;
 			reg-offset = <0x1003>;
 			reg-shift = <2>;
