@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:34:05
+ * Today is: Thursday, the 17 of May, 2012; 22:22:04
  *
  * Description: U-Boot Configurations
  *
@@ -47,21 +47,21 @@
 /* mbref_mio_0_IP2INTC_Irpt */
 /* mbref_reg_0_IP2INTC_Irpt */
 /* xps_iic_0_IIC2INTC_Irpt */
-/* PCIe_Bridge_IP2INTC_Irpt */
-/* xps_sysace_0_SysACE_IRQ */
-/* xps_ether_0_TemacIntc0_Irpt */
-/* xps_timer_0_Interrupt */
 /* xps_uart_0_IP2INTC_Irpt */
+/* xps_ether_0_TemacIntc0_Irpt */
+/* xps_sysace_0_SysACE_IRQ */
+/* PCIe_Bridge_IP2INTC_Irpt */
 /* xps_central_dma_0_IP2INTC_Irpt */
 /* mpmc_0_SDMA3_Rx_IntOut */
 /* mpmc_0_SDMA3_Tx_IntOut */
+/* xps_timer_0_Interrupt */
 
 /* System (Timer) Clock Frequency */
 #define XILINX_CLOCK_FREQ                        100000000
 
 /* Timer is xps_timer_0 */
 #define XILINX_TIMER_BASEADDR                    0x8AEF0000
-#define XILINX_TIMER_IRQ                         4
+#define XILINX_TIMER_IRQ                         0
 
 /* System memory is mpmc_0 */
 #define XILINX_RAM_START                         0x20000000
